tests/bad/include_unsafe/safe.rs
fn main() {}

static FOO: u64 = include_data::include_unsafe!("../../test_data/binary_8");
