tests/bad/include_unsafe/safe.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
 --> tests/bad/include_unsafe/safe.rs:3:19
  |
3 | static FOO: u64 = include_data::include_unsafe!("../../test_data/binary_8");
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior
  = note: this error originates in the macro `include_data::include_unsafe` (in Nightly builds, run with -Z macro-backtrace for more info)
